adds two more transitions for steps modal

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -47,10 +47,17 @@
 }
 .custom-anim-exit-active {
     opacity: 0;
-    transform: translateX(-50%);
+    transform: translateX(50%);
     transition: opacity 300ms, transform 300ms;
 }
 .custom-anim-exit-done {
     opacity: 0;
+    transform: translateX(0%);
+}
+
+code, pre {
+    border-radius: 4px;
+    padding: 2px 4px;
+    background-color: rgb(243, 243, 243);
 }
 </style>
