--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -55,7 +55,7 @@
     transform: translateX(0%);
 }
 
-code, pre {
+code:not(.language-jsx), pre:not(.prismjs) {
     border-radius: 4px;
     padding: 2px 4px;
     background-color: rgb(243, 243, 243);
